# sf

./: .gitignore  AGENTS.md  SPEC.md  bootstrap_sf.sh  model-matrix.json
docs/: review_findings.md
factory-os/: AGENTS.md  SPEC.md  package.json  pnpm-lock.yaml  run.yaml  turbo.json
factory-os/prompts/: 10_scaffold.md  20_api.md  30_web.md  40_evals.md  50_pipelines.md
factory-os/scripts/: merge-and-verify.sh  start-dev.sh  swarm.tmux.sh
pipelines/: README.md  add_feature.dot  fix_bug.dot  new_product.dot  self_check.dot
prompts/: 10_scaffold.md  20_api.md  30_webui.md  40_evals.md  50_pipelines_templates.md  60_integrate.md  70_opus_review.md  lane_api.md  lane_claude_build.md  lane_claude_review.md  lane_evals.md  lane_scaffold.md  lane_web.md
run-configs/: default.yaml
runs/20260214-194640/: meta.env
scripts/: agent.claude.sh  agent.claude.sub.sh  agent.claude.sub.sh.bak.20260214-194354  agent.codex.sh  agent.codex.sub.sh  agent.codex.sub.sh.bak.20260214-194354  env_sandbox.sh  fix_harness_now.sh  install_factory_pack.sh  preflight.sh  preflight.subscriptions_only.sh  preflight.subscriptions_only.sh.bak.20260214-194354  run_integrator.sh  run_lane_claude.sh  run_lane_codex.sh  swarm.tmux.sh  swarm.tmux.sh.bak.20260214-194354
skills/: factory_observability.md  vercel_deploy_dryrun.md  write_holdout_scenarios.md
templates/ts-next-convex-vercel/: README.md  package.json
templates/ts-next-fastapi-fly/: README.md
templates/ts-next-fastapi-fly/backend/: pyproject.toml
templates/ts-next-supabase-vercel/: README.md  package.json
(+1 files in other folders)
